assets/css/dark.css
{{ if not (eq .Site.Params.dark "on") -}}
@media (prefers-color-scheme: dark) {
{{ end -}}
html {
    scrollbar-color: #6c6c6c #2e2e2e;
}

body {
    color: #ebebeb;
    background: #121212;
}

header#banner a {
    color: #e0e0e0;
    text-decoration: none;
}

header#banner nav ul li a {
    color: #cccccc;
}

main#content a {
    color: #00b1ed;
}

main#content p {
    color: #f5f5f5;
}

main#content hr {
    background: #5c5c5c;
}

main#content #toc h4 {
    color: #d4d4d4;
}

main#content ul#posts small {
    color: #a7a7a7;
}

main#content ul#posts li a:hover {
    color: #21c7ff;
}

main#content header#post-header time {
    color: #a7a7a7;
}
{{- if not (eq .Site.Params.dark "on") -}}
}
{{- end -}}

